# gaitRecognition2

./: .gitignore  CMakeLists.txt  Rapport_IFT6150_MikhailKamara.docx
config/: paths.conf
include/: BatchProcessor.h  ExecutablePath.h  FeatureHandler.h  GaitAnalyzer.h  GaitClassifier.h  GaitUtils.h  GaitVisualization.h  Loader.h  PathConfig.h  PersonIdentifier.h
src/: BatchProcessor.cpp  ExecutablePath.cpp  FeatureHandler.cpp  GaitAnalyzer.cpp  GaitClassifier.cpp  GaitUtils.cpp  GaitVisualization.cpp  Loader.cpp  PathConfig.cpp  PersonIdentifier.cpp  debug.txt  main.cpp  main.py
